--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>To do Test</title>
 </head>
 
 <body>
 	<noscript>
-		You need to enable JavaScript to run this app.
+		Basic to do list using material Ui
 	</noscript>
 	<div id="root"></div>
 	<!--
